resolve some of dependencies vulnerabilities